--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -2,7 +2,7 @@
 <h2 class="heading">Filtra noticias por pais y categoria</h2>
 <div class="row mt-3">
     <div class="col-lg-8 offset-lg-2">
-        <form>
+        <form (ngSubmit)="buscarNoticia()">
             <div class="form-group">
                 <select name="categoria" [ngModel]="categoriaSeleccionada" class="form-control form-control-lg">
                   <option [value]="categoria.value" *ngFor="let categoria of categorias">{{ categoria.nombre}}</option>
@@ -13,8 +13,9 @@
                   <option [value]="pais.value" *ngFor="let pais of paises">{{pais.nombre}}</option>
                 </select>
               </div>
+              <button type="submit" class="btn btn-primary btn-block btn-lg">Buscar</button>
         </form>
-        <button class="btn btn-primary btn-block btn-lg">Buscar</button>
+
     </div>  
 </div>
 </div>
