--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-navbar [titulo]="'Buscador de noticiass'"></app-navbar>
+<app-navbar [titulo]="'Buscador de noticias'"></app-navbar>
 <div class="container">
  <app-formulario (parametrosSeleccionados)="buscarNoticias($event)"></app-formulario>
- <app-listado-noticias></app-listado-noticias>
+ <app-spinner *ngIf="loading"></app-spinner>
+ <app-listado-noticias [listNoticia]="listNoticias"></app-listado-noticias>
 </div>
