--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -4,12 +4,12 @@
     <div class="col-lg-8 offset-lg-2">
         <form (ngSubmit)="buscarNoticia()">
             <div class="form-group">
-                <select name="categoria" [ngModel]="categoriaSeleccionada" class="form-control form-control-lg">
+                <select name="categoria" [(ngModel)]="categoriaSeleccionada" class="form-control form-control-lg">
                   <option [value]="categoria.value" *ngFor="let categoria of categorias">{{ categoria.nombre}}</option>
                 </select>
               </div>
               <div class="form-group">
-                <select name="pais" [ngModel]="paisSeleccionado" class="form-control form-control-lg">
+                <select name="pais" [(ngModel)]="paisSeleccionado" class="form-control form-control-lg">
                   <option [value]="pais.value" *ngFor="let pais of paises">{{pais.nombre}}</option>
                 </select>
               </div>
